fixtures/frontend/milestone-2/invalid/recurrence-continuation/main.aivi
value step x =>
    x

value broken =
    0
     @|> step
     <|@ step
     |> step
